[gd_scene load_steps=21 format=2]

[ext_resource path="res://Space Backgrounds/space_background_pack/ScrollingShader2.shader" type="Shader" id=1]
[ext_resource path="res://Menus/Main Menu.gd" type="Script" id=2]
[ext_resource path="res://Space Shooter Redux/Backgrounds/black.png" type="Texture" id=3]
[ext_resource path="res://Space Shooter Redux/PNG/Lasers/laserBlue08.png" type="Texture" id=4]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Space Shooter Redux/PNG/UI/buttonBlue.png" type="Texture" id=6]
[ext_resource path="res://Space Shooter Redux/PNG/UI/buttonGreen.png" type="Texture" id=7]
[ext_resource path="res://Space Shooter Redux/PNG/UI/buttonRed.png" type="Texture" id=8]
[ext_resource path="res://Space Shooter Redux/PNG/UI/buttonYellow.png" type="Texture" id=9]
[ext_resource path="res://Hostiles/Bullets/Bullet_Straight.tscn" type="PackedScene" id=10]
[ext_resource path="res://Space Shooter Redux/PNG/Lasers/laserBlue09.png" type="Texture" id=11]
[ext_resource path="res://Space Shooter Redux/Bonus/kenvector_future.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://Menus/Settings.tscn" type="PackedScene" id=13]
[ext_resource path="res://Menus/UI_ButtonHovered.wav" type="AudioStream" id=14]
[ext_resource path="res://Menus/UI_ButtonClicked.mp3" type="AudioStream" id=15]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 1 )
shader_param/scroll_speed = 0.1

[sub_resource type="DynamicFont" id=2]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=3]
size = 48
outline_size = 2
outline_color = Color( 0.176471, 0.882353, 0.027451, 1 )
font_data = ExtResource( 12 )

[sub_resource type="Animation" id=4]
resource_name = "default"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/Player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.6, 2.3, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 503.579, 528.93 ), Vector2( 550.018, 528.93 ), Vector2( 550.018, 528.93 ), Vector2( 470, 528.93 ), Vector2( 470, 528.93 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer/Bullet_Straight:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 849.969, -74.428 ), Vector2( 410.969, 707.142 ), Vector2( 410.969, 707.142 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationPlayer/Bullet_Straight:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 480.0, 480.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimationPlayer/Bullet_Straight2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.3, 3.3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 510.127, -89.272 ), Vector2( 510.127, -89.272 ), Vector2( 510.127, 736.54 ), Vector2( 510.127, 736.54 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AnimationPlayer/Bullet_Straight2:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.3, 3.3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 240.0, 240.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "reset"
length = 0.5

[node name="Main Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 522.211, 327.011 )
scale = Vector2( 4.07493, 2.76301 )
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 741.0
margin_top = 355.0
margin_right = 963.0
margin_bottom = 437.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayBtn" type="TextureButton" parent="VBoxContainer"]
margin_right = 222.0
margin_bottom = 39.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 9 )
texture_disabled = ExtResource( 8 )
texture_focused = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayLbl" type="Label" parent="VBoxContainer/PlayBtn"]
margin_right = 222.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "New Game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfiniteBtn" type="TextureButton" parent="VBoxContainer"]
margin_top = 43.0
margin_right = 222.0
margin_bottom = 82.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 9 )
texture_disabled = ExtResource( 8 )
texture_focused = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfiniteLbl" type="Label" parent="VBoxContainer/InfiniteBtn"]
margin_right = 222.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "Infinite Mode"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutorialBtn" type="TextureButton" parent="VBoxContainer"]
margin_top = 86.0
margin_right = 222.0
margin_bottom = 125.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 9 )
texture_disabled = ExtResource( 8 )
texture_focused = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutorialLbl" type="Label" parent="VBoxContainer/TutorialBtn"]
margin_right = 222.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "Tutorial"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsBtn" type="TextureButton" parent="VBoxContainer"]
margin_top = 129.0
margin_right = 222.0
margin_bottom = 168.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 9 )
texture_disabled = ExtResource( 8 )
texture_focused = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsLbl" type="Label" parent="VBoxContainer/OptionsBtn"]
margin_right = 222.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "Options"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitBtn" type="TextureButton" parent="VBoxContainer"]
margin_top = 172.0
margin_right = 222.0
margin_bottom = 211.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 9 )
texture_disabled = ExtResource( 8 )
texture_focused = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitLbl" type="Label" parent="VBoxContainer/ExitBtn"]
margin_right = 222.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "Exit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleContainer" type="CenterContainer" parent="."]
margin_right = 1026.0
margin_bottom = 237.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="TitleContainer"]
margin_left = 267.0
margin_top = 91.0
margin_right = 759.0
margin_bottom = 145.0
custom_fonts/font = SubResource( 3 )
text = "Star Shooters"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/default = SubResource( 4 )
anims/reset = SubResource( 5 )

[node name="Player" parent="AnimationPlayer" instance=ExtResource( 5 )]
position = Vector2( 503.579, 528.93 )
scale = Vector2( 2, 2 )

[node name="Bullet_Straight" parent="AnimationPlayer" instance=ExtResource( 10 )]
position = Vector2( 849.969, -74.428 )
scale = Vector2( 3, 3 )
generatesEnergy = true
energySprite = "res://Space Shooter Redux/PNG/Lasers/laserRed08.png"
titleScreenVersion = true

[node name="Sprite" parent="AnimationPlayer/Bullet_Straight" index="2"]
texture = ExtResource( 4 )

[node name="Bullet_Straight2" parent="AnimationPlayer" instance=ExtResource( 10 )]
position = Vector2( 510.127, -89.272 )
scale = Vector2( 3, 3 )
titleScreenVersion = true

[node name="Sprite" parent="AnimationPlayer/Bullet_Straight2" index="2"]
texture = ExtResource( 11 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Settings" parent="CanvasLayer" instance=ExtResource( 13 )]
visible = false

[node name="ButtonHoveredSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
bus = "SFX"

[node name="ButtonClickedSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
bus = "SFX"

[connection signal="button_up" from="VBoxContainer/PlayBtn" to="." method="_on_Menu_button_up" binds= [ "play" ]]
[connection signal="mouse_entered" from="VBoxContainer/PlayBtn" to="." method="_on_Btn_mouse_entered"]
[connection signal="button_up" from="VBoxContainer/InfiniteBtn" to="." method="_on_Menu_button_up" binds= [ "infinite" ]]
[connection signal="mouse_entered" from="VBoxContainer/InfiniteBtn" to="." method="_on_Btn_mouse_entered"]
[connection signal="button_up" from="VBoxContainer/TutorialBtn" to="." method="_on_Menu_button_up" binds= [ "tutorial" ]]
[connection signal="mouse_entered" from="VBoxContainer/TutorialBtn" to="." method="_on_Btn_mouse_entered"]
[connection signal="button_up" from="VBoxContainer/OptionsBtn" to="." method="_on_Menu_button_up" binds= [ "options" ]]
[connection signal="mouse_entered" from="VBoxContainer/OptionsBtn" to="." method="_on_Btn_mouse_entered"]
[connection signal="button_up" from="VBoxContainer/ExitBtn" to="." method="_on_Menu_button_up" binds= [ "exit" ]]
[connection signal="mouse_entered" from="VBoxContainer/ExitBtn" to="." method="_on_Btn_mouse_entered"]

[editable path="AnimationPlayer/Bullet_Straight"]
[editable path="AnimationPlayer/Bullet_Straight2"]
